--- a/.testcaferc.json
+++ b/.testcaferc.json
@@ -1,4 +1,4 @@
 {
   "nativeAutomation": "true",
-  "browsers": "path:%ProgramFiles%\\Google\\Chrome\\Application\\chrome.exe"
+  "browsers": "path:C:\\%ProgramFiles%\\Google\\Chrome\\Application\\chrome.exe"
 }
