try fix visual tests

--- a/.testcaferc.json
+++ b/.testcaferc.json
@@ -1,3 +1,4 @@
 {
-  "nativeAutomation": "true"
+  "nativeAutomation": "true",
+  "browsers": "path:C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe"
 }
