switch off native-automation

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
     "serve": "live-server --port=7777 --watch=build",
     "serve_ci": "http-server",
     "test": "karma start ./build-scripts/karma.conf.js",
-    "testcafe": "testcafe chrome testCafe/ --app \"http-server\" --selector-timeout 1500 --reporter minimal",
-    "testcafe_file": "concurrently \"http-server --silent\" \"testcafe chrome testCafe/survey/surveyWidth.ts --selector-timeout 1500 --reporter minimal\"",
+    "testcafe": "testcafe chrome testCafe/ --app \"http-server\" --native-automation --selector-timeout 1500 --reporter minimal",
+    "testcafe_file": "concurrently \"http-server --silent\" \"testcafe chrome testCafe/survey/surveyWidth.ts --native-automation --selector-timeout 1500 --reporter minimal\"",
     "testcafe_ci": "testcafe -c 4 -q chrome:headless testCafe/ --app \"http-server --silent\" --reporter minimal",
     "testcafe_sauce": "testcafe \"saucelabs:Chrome@56.0:Windows 10\" testCafe/",
-    "testcafe:ko": "http-server --silent & testcafe -c 4 -q attemptLimit=5,successThreshold=1 chrome:headless testCafe/ --reporter minimal --env=knockout",
-    "testcafe:react": "http-server --silent & testcafe -c 4 -q attemptLimit=5,successThreshold=1 chrome:headless testCafe/ --reporter minimal --env=react",
-    "testcafe:vue": "http-server --silent & testcafe -c 4 -q attemptLimit=5,successThreshold=1 chrome:headless testCafe/ --reporter minimal --env=vue",
+    "testcafe:ko": "http-server --silent & testcafe -c 4 -q attemptLimit=5,successThreshold=1 chrome:headless testCafe/ --native-automation --reporter minimal --env=knockout",
+    "testcafe:react": "http-server --silent & testcafe -c 4 -q attemptLimit=5,successThreshold=1 chrome:headless testCafe/ --native-automation --reporter minimal --env=react",
+    "testcafe:vue": "http-server --silent & testcafe -c 4 -q attemptLimit=5,successThreshold=1 chrome:headless testCafe/ --native-automation --reporter minimal --env=vue",
     "release": "commit-and-tag-version --message \"Release: %s [azurepipelines skip]\" ",
     "build_core_dev": "webpack --config ./build-scripts/survey-core/webpack.config.js --env.buildType dev",
     "build_core_prod": "webpack --config ./build-scripts/survey-core/webpack.config.js --env.buildType prod",
@@ -82,10 +82,10 @@
     "visual-regression-tests:file": "testcafe chrome:headless --app \"http-server\" ./visualRegressionTests/tests/defaultV2/paneldynamic.ts --screenshots ./ --reporter minimal --selector-timeout 1500",
     "visual-regression-tests:ci:vue3": "testcafe -c 4 -q attemptLimit=5,successThreshold=1 chrome:headless ./visualRegressionTests/ --app \"npm run preview --prefix ./packages/survey-vue3-ui/example\" --screenshots ./ --selector-timeout 1500 --reporter minimal --env=vue3",
     "visual-regression-tests:vue3": "testcafe -c 4 -q chrome ./visualRegressionTests/ --app \"npm run preview --prefix ./packages/survey-vue3-ui/example\" --screenshots ./ --selector-timeout 1500 --reporter minimal --env=vue3",
-    "testcafe:ci:vue3": "testcafe -c 4 -q attemptLimit=5,successThreshold=1 chrome:headless testCafe/ --app \"npm run preview --prefix ./packages/survey-vue3-ui/example\" --selector-timeout 1500 --reporter minimal --env=vue3",
-    "testcafe:vue3": "testcafe chrome testCafe/ --app \"npm run preview --prefix ./packages/survey-vue3-ui/example \" --selector-timeout 1500 --reporter minimal --env=vue3",
-    "testcafe:angular": "testcafe chrome testCafe/ --app \"http-server ./packages/survey-angular-ui/example/dist --proxy http://localhost:8080? -p 8080\" --selector-timeout 1500 --reporter minimal --env=angular",
-    "testcafe:ci:angular": "testcafe -c 4 -q attemptLimit=5,successThreshold=1 chrome:headless testCafe/ --app \"http-server ./packages/survey-angular-ui/example/dist --proxy http://localhost:8080? -p 8080\" --selector-timeout 1500 --reporter minimal --env=angular",
+    "testcafe:ci:vue3": "testcafe -c 4 -q attemptLimit=5,successThreshold=1 chrome:headless testCafe/ --app \"npm run preview --prefix ./packages/survey-vue3-ui/example\" ---native-automation -selector-timeout 1500 --reporter minimal --env=vue3",
+    "testcafe:vue3": "testcafe chrome testCafe/ --app \"npm run preview --prefix ./packages/survey-vue3-ui/example \" --native-automation --selector-timeout 1500 --reporter minimal --env=vue3",
+    "testcafe:angular": "testcafe chrome testCafe/ --app \"http-server ./packages/survey-angular-ui/example/dist --proxy http://localhost:8080? -p 8080\" --native-automation --selector-timeout 1500 --reporter minimal --env=angular",
+    "testcafe:ci:angular": "testcafe -c 4 -q attemptLimit=5,successThreshold=1 chrome:headless testCafe/ --app \"http-server ./packages/survey-angular-ui/example/dist --proxy http://localhost:8080? -p 8080\" --native-automation --selector-timeout 1500 --reporter minimal --env=angular",
     "prepare": "husky install"
   },
   "version": "1.9.104",
