--- a/package.json
+++ b/package.json
@@ -176,7 +176,8 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-fix-style-only-entries": "^0.6.1",
     "webpack-merge": "^5.7.3",
-    "webpack-svgstore-plugin": "4.0.1"
+    "webpack-svgstore-plugin": "4.0.1",
+    "get-func-name": "2.0.0"
   },
   "overrides": {
     "karma-webpack": {
