--- a/package.json
+++ b/package.json
@@ -156,7 +156,7 @@
     "style-loader": "^1.2.1",
     "surveyjs-doc-generator": "git+https://github.com/surveyjs/surveyjs-doc-generator.git",
     "svg-inline-loader": "^0.8.2",
-    "testcafe": "~2.6.2",
+    "testcafe": "3.3.0",
     "ts-jest": "^26.1.1",
     "ts-loader": "^8.0.15",
     "ts-node": "3.3.0",
