Resolved  #7131 - Add themes build to jQuery and survey-vue packages and fix examples code (use import from /themes)

--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "build_knockout_prod": "webpack --config ./build-scripts/survey-knockout/webpack.config.js --env.buildType prod",
     "build_react_dev": "webpack --config ./build-scripts/survey-react/webpack.config.js --env.buildType dev",
     "build_react_prod": "webpack --config ./build-scripts/survey-react/webpack.config.js --env.buildType prod",
-    "build_vue_dev": "webpack --config ./build-scripts/survey-vue/webpack.config.js --env.buildType dev",
-    "build_vue_prod": "webpack --config ./build-scripts/survey-vue/webpack.config.js --env.buildType prod",
-    "build_jquery_dev": "webpack --config ./build-scripts/survey-jquery/webpack.config.js --env.buildType dev",
-    "build_jquery_prod": "webpack --config ./build-scripts/survey-jquery/webpack.config.js --env.buildType prod",
+    "build_vue_dev": "webpack --config ./build-scripts/survey-vue/webpack.config.js --env.buildType dev && webpack --config ./build-scripts/survey-vue/webpack.themes.config.js --env.buildType dev",
+    "build_vue_prod": "webpack --config ./build-scripts/survey-vue/webpack.config.js --env.buildType prod && webpack --config ./build-scripts/survey-vue/webpack.themes.config.js --env.buildType prod",
+    "build_jquery_dev": "webpack --config ./build-scripts/survey-jquery/webpack.config.js --env.buildType dev && webpack --config ./build-scripts/survey-jquery/webpack.themes.config.js --env.buildType dev",
+    "build_jquery_prod": "webpack --config ./build-scripts/survey-jquery/webpack.config.js --env.buildType prod && webpack --config ./build-scripts/survey-jquery/webpack.themes.config.js --env.buildType prod",
     "build_angular_dev": "webpack --config ./build-scripts/survey-angular/webpack.config.js --env.buildType dev",
     "build_angular_prod": "webpack --config ./build-scripts/survey-angular/webpack.config.js --env.buildType prod",
     "build_i18n_dev": "webpack --config ./build-scripts/survey-core/webpack.i18n.js --env.buildType dev",
