--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
   "name": "survey-library",
   "private": true,
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "7.23.3",
     "@types/ace": "0.0.32",
     "@types/angular": "^1.6.2",
     "@types/babel__traverse": "7.18.2",
