Add dev build commands for vue3 package

--- a/packages/survey-vue3-ui/package.json
+++ b/packages/survey-vue3-ui/package.json
@@ -6,7 +6,9 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "watch": "vite build --watch",
+    "watch:dev": "vite build --watch --mode development",
     "build": "vite build && npm run build:types",
+    "build:dev": "vite build --mode development",
     "build:types": "vue-tsc --project tsconfig.types.json --emitDeclarationOnly",
     "type-check": "vue-tsc --project tsconfig.types.json --noEmit",
     "test": "vitest --no-threads tests/test.spec.ts",
