Add azure task to check postcss compatibility

--- a/build-packages.yml
+++ b/build-packages.yml
@@ -260,6 +260,11 @@ jobs:
 
     - script: |
         cd $(Build.SourcesDirectory)/survey-library
+        npm run test:postcss
+      displayName: "check postcss compatibility"
+
+    - script: |
+        cd $(Build.SourcesDirectory)/survey-library
         npm run testsingle
       displayName: "run unit tests"
 
