Update build-packages.yml for Azure Pipelines

--- a/build-packages.yml
+++ b/build-packages.yml
@@ -746,6 +746,7 @@ jobs:
     - checkout: Service
       persistCredentials: true
       clean: true
+      fetchDepth: 1
 
     - task: NodeTool@0
       inputs:
