Update build-packages.yml for Azure Pipelines

--- a/build-packages.yml
+++ b/build-packages.yml
@@ -917,9 +917,9 @@ jobs:
         $env:GIT_REDIRECT_STDERR = '2>&1'
         git config --global user.email "kurmanov.work@gmail.com"
         git config --global user.name "dmitrykurmanov"
-        git checkout master
         git pull origin master
-        git fetch --tags --force
+        git fetch origin master --tags --force
+        git checkout master
         git add surveyjs.io/App_Data/DocsLibrary
         git commit -m "updated survey-library docs [azurepipelines skip]"
         git pull origin master
