--- a/packages/survey-vue3-ui/package.json
+++ b/packages/survey-vue3-ui/package.json
@@ -37,7 +37,7 @@
     "vite": "^3.1.8",
     "vitest": "~0.32.4",
     "vitest-canvas-mock": "^0.3.3",
-    "vue": "^3.2.41",
+    "vue": "3.4.19",
     "vue-tsc": "^1.0.8"
   }
 }
