Work for #7810 - Progress Bar Issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,4 +19,9 @@
     "editor.tabSize": 2,
     "editor.formatOnSave": true,
     "eslint.format.enable": true,
+    "jest.outputConfig": {
+        "revealOn": "run",
+        "revealWithFocus": "test-results",
+        "clearOnRun": "none"
+    },
 }
