--- a/packages/survey-vue3-ui/package.json
+++ b/packages/survey-vue3-ui/package.json
@@ -23,7 +23,7 @@
     "@vitejs/plugin-vue": "^3.1.2",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/test-utils": "latest",
+    "@vue/test-utils": "2.4.4",
     "@vue/tsconfig": "^0.1.3",
     "commit-and-tag-version": "^11.0.0",
     "rollup-plugin-copy": "^3.5.0",
