refactoring eslintrc.json

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -214,7 +214,8 @@
 			],
 			"rules": {
 				"no-extra-boolean-cast": "off",
-				"vue/no-use-v-if-with-v-for": "off"
+				"vue/no-use-v-if-with-v-for": "off",
+				"vue/multi-word-component-names": "off"
 			}
 		},
 		{
