--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "@types/signature_pad": "^2.3.0",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
     "ace-builds": "1.2.2",
     "ajv": "6.12.3",
     "autoprefixer": "^10.4.17",
@@ -133,7 +134,7 @@
     "eslint-cli": "^1.1.1",
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-surveyjs": "file:eslint-surveyjs",
-    "eslint-plugin-vue": "^7.16.0",
+    "eslint-plugin-vue": "^9.3.0",
     "file-loader": "0.10.0",
     "generate-json-webpack-plugin": "^1.0.0",
     "get-func-name": "2.0.0",
